--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "Validator": "^1.0.8",
     "eslint": "^6.1.0",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
