--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "mongodb": "^3.3.0-beta2",
-    "mongoose": "^5.6.6",
-    "object-values-to-array": "^1.0.0"
+    "mongoose": "^5.6.6"
   }
 }
