--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "Validator": "^1.0.8",
     "eslint": "^6.1.0",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "mongodb": "^3.3.0-beta2",
-    "mongoose": "^5.6.6"
+    "mongoose": "^5.6.6",
+    "validator": "^11.1.0"
   }
 }
